# synapse-module-cookiecutter-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.directory_name }}/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.directory_name }}/.github/: CODEOWNERS
{{ cookiecutter.directory_name }}/.github/workflows/: changelog_check.yml  ci.yml  release.yml
{{ cookiecutter.directory_name }}/scripts-dev/: check_newsfragment.sh  lint.sh
{{ cookiecutter.directory_name }}/tests/: __init__.py  test_example.py
{{ cookiecutter.directory_name }}/{{ cookiecutter.package_name }}/: __init__.py  module.py
