[metadata]
name = {{ cookiecutter.package_name }}
description = "{{ cookiecutter.package_description }}"
version = 0.0.0


[options]
python_requires = >= 3.7
install_requires =
  attrs


[options.extras_require]
dev =
  # for tests
  matrix-synapse
  tox
  twisted
  aiounittest
  # for type checking
  mypy == 0.910
  # for linting
  black == 21.9b0
  flake8 == 4.0.1
  isort == 5.9.3


[flake8]
# line length defaulted to by black
max-line-length = 88

# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203
